<resources>
    <string name="app_name">Recipe Realm</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="_60_premium_recipes">60+ Premium recipes</string>
    <string name="start_cooking">Start cooking</string>
    <string name="find_best_recipes_for_cooking">Find best recipes for cooking</string>
    <string name="find_best_recipes_for_cookings">Find best recipes \nfor cooking</string>
    <string name="let_s_cooking">Let’s\nCook</string>
    <string name="search">Search recipes</string>
    <string name="trending_now">Trending now 🔥</string>
    <string name="see_all">See all</string>
    <string name="_15_10">15:10</string>
    <string name="_4_5">4,5</string>
    <string name="how_to_make_sushi_at_home">How to make sushi at home</string>
    <string name="by_niki_samantha">By Niki Samantha</string>
    <string name="popular_category">Popular category</string>
    <string name="breakfast">Breakfast</string>
    <string name="pepper_sweetcorn_ramen">Pepper sweetcorn ramen</string>
    <string name="time">Time</string>
    <string name="recent_recipe">Recent recipe</string>
    <string name="popular_creators">Popular creators</string>
    <string name="troyan_smith">Troyan \nSmith</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <string name="saved_recipes">Saved recipes</string>
    <string name="notifications">Notifications</string>
    <string name="all">All</string>
    <string name="today">Today</string>
    <string name="new_recipe">New recipe!</string>
    <string name="indonesian_chicken_burger">Indonesian chicken burger</string>
    <string name="far_far_away_behind_the_word_mountains_far_from_the_countries">Far far away, behind the word mountains, far from the countries.</string>
    <string name="don_t_forget_to_try_your_saved_recipe">Don’t forget to try your saved recipe</string>
    <string name="my_profile">My profile</string>
    <string name="edit_profile">Edit profile</string>
    <string name="alessandra_blair">Alessandra Blair</string>
    <string name="hello_world_i_m_alessandra_blair_i_m_from_italy_i_love_cooking_so_much">Hello world I’m Alessandra Blair, I’m from Italy 🇮🇹 I love cooking so much!</string>
    <string name="recipe">Recipe</string>
    <string name="_3">3</string>
    <string name="videos">Videos</string>
    <string name="_13">13</string>
    <string name="followers">Followers</string>
    <string name="_13k">13K</string>
    <string name="_130">130</string>
    <string name="following">Following</string>
    <string name="how_to_make_french_toast">How to make french \ntoast</string>
    <string name="_300_reviews">(300 Reviews)</string>
    <string name="ingredients">Ingredients</string>
    <string name="_5_items">5 items</string>
    <string name="follow">Follow</string>
    <string name="bali_indonesia">Bali, Indonesia</string>
    <string name="roberta_anny">Roberta Anny</string>
    <string name="_200g">200g</string>
    <string name="bread">Bread</string>
    <string name="create_recipe">Create recipe</string>
    <string name="add_new_ingredient">+ Add new Ingredient</string>
    <string name="save_my_recipes">Save my recipes</string>
    <string name="cook_time">Cook time</string>
    <string name="_45_min">45 min</string>
    <string name="serves">Serves</string>
    <string name="bento_lunch_box_ideas_for_work">Add recipe title.</string>
    <string name="item_name">Item name</string>
    <string name="quantity">Quantity</string>
    <string name="chicken">Chicken</string>
    <string name="search_result">Search Result</string>
</resources>