<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.SplashFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/todo"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_main_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv60premium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/_60_premium_recipes"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/ic_star"
        android:layout_marginEnd="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv60premium"
        app:layout_constraintEnd_toStartOf="@+id/tv60premium"
        app:layout_constraintTop_toTopOf="@+id/tv60premium"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/find_best_recipes_for_cooking"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnStart"
        app:layout_constraintEnd_toEndOf="@+id/btnStart"
        app:layout_constraintStart_toStartOf="@+id/btnStart" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/let_s_cooking"
        android:textColor="@color/white"
        android:textSize="55sp"
        android:gravity="center"
        android:fontFamily="@font/poppins_bold"
        android:layout_marginBottom="25dp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="@+id/btnStart"
        app:layout_constraintStart_toStartOf="@+id/btnStart" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/red"
        android:fontFamily="@font/poppins_bold"
        android:paddingHorizontal="30dp"
        android:paddingVertical="15dp"
        android:text="@string/start_cooking"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="UnusedAttribute" />

</androidx.constraintlayout.widget.ConstraintLayout>