<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/edtItemName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:autofillHints="false"
            android:background="@drawable/bg_edit"
            android:hint="@string/item_name"
            android:inputType="text"
            android:maxLines="1"
            android:padding="15dp"
            android:textColor="@color/black"
            android:textColorHint="#C1C1C1"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edtQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            android:autofillHints="false"
            android:background="@drawable/bg_edit"
            android:hint="@string/quantity"
            android:inputType="text"
            android:maxLines="1"
            android:padding="15dp"
            android:textColor="@color/black"
            android:textColorHint="#C1C1C1"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:contentDescription="@string/todo"
            android:src="@drawable/minus_border" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>