<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.fragments.NotificationFragment">

    <TextView
        android:id="@+id/tvNotification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/notifications"
        android:textColor="@color/neutral"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:visibility="gone"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_union"
        app:layout_constraintBottom_toBottomOf="@+id/tvNotification"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvNotification" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:cardBackgroundColor="@color/red"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp"
        app:layout_constraintStart_toStartOf="@+id/tvNotification"
        app:layout_constraintTop_toBottomOf="@+id/tvNotification">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="8dp">

            <TextView
                android:id="@+id/tvBreakfast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:fontFamily="@font/poppins_semi_bold"
                android:maxLines="1"
                android:text="@string/all"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/today"
        android:textColor="@color/neutral"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView6" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcvNotification"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDay"
        tools:itemCount="1"
        tools:listitem="@layout/item_notification" />

</androidx.constraintlayout.widget.ConstraintLayout>