<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".ui.fragments.DetailRecipeFragment">

<ImageView
    android:id="@+id/ivMore"
    android:layout_width="25dp"
    android:layout_height="25dp"
    android:layout_margin="20dp"
    android:visibility="gone"
    android:contentDescription="@string/todo"
    android:src="@drawable/ic_more"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<ImageView
    android:id="@+id/ivBack"
    android:layout_width="25dp"
    android:layout_height="25dp"
    android:layout_margin="20dp"
    android:contentDescription="@string/todo"
    android:src="@drawable/ic_arrow_back"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<TextView
    android:id="@+id/tvFindBest"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:fontFamily="@font/poppins_bold"
    android:text="@string/how_to_make_french_toast"
    android:textColor="@color/neutral"
    android:textSize="24sp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/ivBack" />

<androidx.cardview.widget.CardView
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_margin="20dp"
    app:cardBackgroundColor="@color/gray"
    app:cardCornerRadius="12dp"
    app:cardElevation="0dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/tvFindBest">

    <ImageView
        android:id="@+id/ivVideo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo"
        android:scaleType="centerCrop"
        android:src="@drawable/image" />

</androidx.cardview.widget.CardView>

<androidx.cardview.widget.CardView
    android:id="@+id/cardView5"
    android:layout_width="50dp"
    android:layout_height="50dp"
    android:layout_margin="8dp"
    android:layout_marginStart="151dp"
    android:visibility="gone"
    android:layout_marginEnd="160dp"
    app:cardBackgroundColor="#99303030"
    app:cardCornerRadius="50dp"
    app:cardElevation="10dp"
    app:layout_constraintBottom_toBottomOf="@+id/cardView"
    app:layout_constraintEnd_toEndOf="@+id/cardView"
    app:layout_constraintStart_toStartOf="@+id/cardView"
    app:layout_constraintTop_toTopOf="@+id/cardView">

    <ImageView
        android:id="@+id/ivPlay"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_gravity="center"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_play"
        android:textColor="@color/white" />

</androidx.cardview.widget.CardView>

<ImageView
    android:id="@+id/ivLocation"
    android:layout_width="20dp"
    android:layout_height="20dp"
    android:layout_marginTop="20dp"
    android:contentDescription="@string/todo"
    android:src="@drawable/ic_location"
    app:layout_constraintStart_toStartOf="@+id/cardView"
    app:layout_constraintTop_toBottomOf="@+id/cardView" />

<TextView
    android:id="@+id/tvLocation"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="5dp"
    android:fontFamily="@font/poppins_regular"
    android:text="@string/bali_indonesia"
    android:textColor="#A9A9A9"
    android:textSize="14sp"
    app:layout_constraintBottom_toBottomOf="@+id/ivLocation"
    app:layout_constraintStart_toEndOf="@+id/ivLocation"
    app:layout_constraintTop_toTopOf="@+id/ivLocation" />

<TextView
    android:id="@+id/tvIngredients"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:fontFamily="@font/poppins_bold"
    android:text="@string/ingredients"
    android:textColor="@color/neutral"
    android:textSize="20sp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/ivLocation" />

<androidx.recyclerview.widget.RecyclerView
    android:id="@+id/rcvIngredients"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_marginHorizontal="20dp"
    android:layout_marginVertical="10dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/tvIngredients"
    tools:itemCount="1"
    tools:listitem="@layout/item_ingredients" />

</androidx.constraintlayout.widget.ConstraintLayout>